tests/baselines/reference/callSignaturesWithAccessibilityModifiersOnParameters.errors.txt
==== tests/cases/compiler/callSignaturesWithAccessibilityModifiersOnParameters.ts (23 errors) ====
    // Call signature parameters do not allow accessibility modifiers
    
    function foo(public x, private y) { }
                 ~~~~~~
!!! error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
    var f = function foo(public x, private y) { }
                         ~~~~~~
!!! error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
    var f2 = function (public x, private y) { }
                       ~~~~~~
!!! error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
    var f3 = (x, private y) => { }
                 ~~~~~~~
!!! error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
    var f4 = <T>(public x: T, y: T) => { }
                 ~~~~~~
!!! error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
    
    function foo2(private x: string, public y: number) { }
                  ~~~~~~~
!!! error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
    var f5 = function foo(private x: string, public y: number) { }
                          ~~~~~~~
!!! error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
    var f6 = function (private x: string, public y: number) { }
                       ~~~~~~~
!!! error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
    var f7 = (private x: string, public y: number) => { }
              ~~~~~~~
!!! error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
    var f8 = <T>(private x: T, public y: T) => { }
                 ~~~~~~~
!!! error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
    
    class C {
        foo(public x, private y) { }
            ~~~~~~
!!! error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
        foo2(public x: number, private y: string) { }
             ~~~~~~
!!! error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
        foo3<T>(public x: T, private y: T) { }
                ~~~~~~
!!! error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
    }
    
    interface I {
        (private x, public y);
         ~~~~~~~
!!! error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
        (private x: string, public y: number);
         ~~~~~~~
!!! error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
        foo(private x, public y);
            ~~~~~~~
!!! error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
        foo(public x: number, y: string);
            ~~~~~~
!!! error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
        foo3<T>(x: T, private y: T);
                      ~~~~~~~
!!! error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
    }
    
    var a: {
        foo(public x, private y);
            ~~~~~~
!!! error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
        foo2(private x: number, public y: string);
             ~~~~~~~
!!! error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
    };
    
    var b = {
        foo(public x, y) { },
            ~~~~~~
!!! error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
        a: function foo(x: number, private y: string) { },
                                   ~~~~~~~
!!! error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
        b: <T>(public x: T, private y: T) => { }
               ~~~~~~
!!! error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
    }